--- a/index.html
+++ b/index.html
@@ -5,42 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="bootstrap-theme" href="css/bootstrap-theme.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
   <section id="content-main">
     <header>
-      <img class="inline" src="http://placehold.it/100x100">
-      <div class="inline pull-right">
+      <div class="block">
         <h1 class="container-fluid text-right">Georgia Judd</h1>
         <h4 class="container-fluid text-right">Portfolio</h4>
       </div>
-      <img class="img-responsive center-block" src="http://placehold.it/1140x350">
+      <!img class="img-responsive center-block" src="http://placehold.it/1140x350" alt="placeholder header image">
     </header>
     <section class="container-fluid">
       <h3>Featured Work</h3>
-      <article class="col-md-6">
-        <img class="img-responsive center-block" src="http://placehold.it/555x300">
-        <h4>Project 1</h4>
-        <caption>details</caption>
+      <article class="col-md-6 article-padding">
+        <img class="img-responsive center-block" src="images/ShopBuddyPortfolio.png" alt="ShopBuddy project image">
+        <h4>ShopBuddy</h4>
+        <figcaption>A mobile app to help shoppers make sustainable choices</figcaption>
       </article>
-      <article class="col-md-6">
-        <img class="img-responsive center-block" src="http://placehold.it/555x300">
+      <article class="col-md-6 article-padding">
+        <img class="img-responsive center-block" src="http://placehold.it/555x300" alt="placeholder project image">
         <h4>Project 2</h4>
-        <caption>details</caption>
+        <figcaption>details</figcaption>
       </article>
-      <article class="col-md-6">
-        <img class="img-responsive center-block" src="http://placehold.it/555x300">
+      <article class="col-md-6 article-padding">
+        <img class="img-responsive center-block" src="http://placehold.it/555x300" alt="placeholder project image">
         <h4>Project 3</h4>
-        <caption>details</caption>
+        <figcaption>details</figcaption>
       </article>
-      <article class="col-md-6">
-        <img class="img-responsive center-block" src="http://placehold.it/555x300">
+      <article class="col-md-6 article-padding">
+        <img class="img-responsive center-block" src="http://placehold.it/555x300" alt="placeholder project image">
         <h4>Project 4</h4>
-        <caption>details</caption>
+        <figcaption>details</figcaption>
       </article>
     </section>
+    <footer>
+      <p class="text-muted">G. Judd 2016</p>
+    </footer>
   </section>
 </body>
 </html>
